# GrayChess

./: .gitignore  CMakeLists.txt  README.md
board/: Board.cpp  BoardTests.cpp  Makefile
move/: Move.cpp  MoveGenerator.cpp
src/: main.cpp
src/board/: Board.cpp  Board.h
src/engine/: Eval.cpp  Eval.h  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h  Zobrist.cpp  Zobrist.h
src/move/: AttackTables.cpp  AttackTables.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveList.h
src/uci/: UCI.cpp  UCI.h
src/utils/: Bits.h
utils/: bitHelpers.py  testing.ipynb
